Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -1,14 +1,28 @@
 {
   "metadata": {
     "kernelspec": {
+      "name": "py-dku-venv-markitdown",
       "display_name": "Python (env markitdown)",
-      "language": "python",
-      "name": "py-dku-venv-markitdown"
+      "language": "python"
     },
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.11.11",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
+    },
+    "tags": [],
     "creator": "fabien.antoine@cgi.com",
     "createdOn": 1735622424502,
-    "tags": [],
-    "customFields": {}
+    "customFields": {},
+    "modifiedBy": "fabien.antoine@cgi.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
@@ -18,14 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\n",
-        "from langchain.chains.question_answering import load_qa_chain\n",
-        "from dataiku.langchain.dku_llm import DKUChatLLM\n",
-        "\n",
-        "KB_ID \u003d \"zQ92IhQ9\"\n",
-        "\n",
-        "client \u003d dataiku.api_client()\n",
-        "project \u003d client.get_default_project()"
+        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\n\nKB_ID \u003d \"zQ92IhQ9\"\n\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
       ],
       "outputs": []
     },
@@ -34,11 +41,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Listing available LLMs\n",
-        "llm_list \u003d project.list_llms()\n",
-        "\n",
-        "for llm in llm_list:\n",
-        "    print(f\"- {llm.description} (id: {llm.id})\")"
+        "# Listing available LLMs\nllm_list \u003d project.list_llms()\n\nfor llm in llm_list:\n    print(f\"- {llm.description} (id: {llm.id})\")"
       ],
       "outputs": []
     },
@@ -47,8 +50,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Fill with your LLM id\n",
-        "LLM_ID \u003d \"XXXXX\""
+        "# Fill with your LLM id\nLLM_ID \u003d \"openai:OpenAI-FA:gpt-4o\""
       ],
       "outputs": []
     },
@@ -57,10 +59,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Preparing the Knowledge Bank, Vector store and LLM\n",
-        "kb \u003d dataiku.KnowledgeBank(id\u003dKB_ID, project_key\u003dproject.project_key)\n",
-        "vector_store \u003d kb.as_langchain_vectorstore()\n",
-        "gpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
+        "# Preparing the Knowledge Bank, Vector store and LLM\nkb \u003d dataiku.KnowledgeBank(id\u003dKB_ID, project_key\u003dproject.project_key)\nvector_store \u003d kb.as_langchain_vectorstore()\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
       ],
       "outputs": []
     },
@@ -69,9 +68,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Create the question answering chain\n",
-        "chain \u003d load_qa_chain(gpt_lc, chain_type\u003d\"stuff\")\n",
-        "query \u003d \"What will inflation in Europe look like and why?\"\n"
+        "# Create the question answering chain\nchain \u003d load_qa_chain(gpt_lc, chain_type\u003d\"stuff\")\nquery \u003d \"What will inflation in Europe look like and why?\"\n"
       ],
       "outputs": []
     },
@@ -80,11 +77,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Performing semantic (vector) search\n",
-        "search_results \u003d vector_store.similarity_search(query)\n",
-        "\n",
-        "for search_result in search_results:\n",
-        "    print(f\"- {search_result.page_content}\\n\")"
+        "# Performing semantic (vector) search\nsearch_results \u003d vector_store.similarity_search(query)\n\nfor search_result in search_results:\n    print(f\"- {search_result.page_content}\\n\")"
       ],
       "outputs": []
     },
@@ -93,9 +86,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# ⚡ Get the results ⚡\n",
-        "resp \u003d chain({\"input_documents\":search_results, \"question\": query})\n",
-        "print(resp[\"output_text\"])"
+        "# ⚡ Get the results ⚡\nresp \u003d chain({\"input_documents\":search_results, \"question\": query})\nprint(resp[\"output_text\"])"
       ],
       "outputs": []
     }
