Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -18,11 +18,11 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "tags": [],
-    "creator": "fabien.antoine@cgi.com",
-    "createdOn": 1735622424502,
     "customFields": {},
-    "modifiedBy": "fabien.antoine@cgi.com"
+    "creator": "fabien.antoine@cgi.com",
+    "modifiedBy": "fabien.antoine@cgi.com",
+    "createdOn": 1735622424502,
+    "tags": []
   },
   "nbformat": 4,
   "nbformat_minor": 1,
@@ -32,7 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\n\nKB_ID \u003d \"zQ92IhQ9\"\n\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
+        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\n\nKI_ID \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\n\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
       ],
       "outputs": []
     },
@@ -50,7 +50,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Fill with your LLM id\nLLM_ID \u003d \"openai:OpenAI-FA:gpt-4o\""
+        "# Fill with your LLM id\nLLM_ID \u003d \"openai:OpenAI-FA:gpt-4o-mini\""
       ],
       "outputs": []
     },
