--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -59,7 +59,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Preparing the Knowledge Bank, Vector store and LLM\nkb \u003d dataiku.KnowledgeBank(id\u003dKB_ID, project_key\u003dproject.project_key)\nvector_store \u003d kb.as_langchain_vectorstore()\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
+        "# Preparing the Knowledge Bank, Vector store and LLM\nkb \u003d [ dataiku.KnowledgeBank(id\u003dKB_ID[key], project_key\u003dproject.project_key) for key in \nvector_store \u003d kb.as_langchain_vectorstore()\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
       ],
       "outputs": []
     },
