Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -32,7 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\n\nKI_ID \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\n\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
+        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\n\nKI_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\n\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
       ],
       "outputs": []
     },
@@ -59,7 +59,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Preparing the Knowledge Bank, Vector store and LLM\nkb \u003d [ dataiku.KnowledgeBank(id\u003dKB_ID[key], project_key\u003dproject.project_key) for key in \nvector_store \u003d kb.as_langchain_vectorstore()\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
+        "# Preparing the Knowledge Bank, Vector store and LLM\nkbs \u003d [ dataiku.KnowledgeBank(id\u003dKB_ID[key], project_key\u003dproject.project_key) for key in KB_IDs]\nvector_stores \u003d [kb.as_langchain_vectorstore() for kb in kbs]\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
       ],
       "outputs": []
     },
