--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -59,7 +59,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Preparing the Knowledge Bank, Vector store and LLM\nkbs \u003d [ dataiku.KnowledgeBank(id\u003dKB_ID[key], project_key\u003dproject.project_key) for key in KB_IDs]\nvector_stores \u003d [kb.as_langchain_vectorstore() for kb in kbs]\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
+        "# Preparing the Knowledge Bank, Vector store and LLM\nKBs \u003d {\n    key: dataiku.KnowledgeBank(id\u003dvalue, project_key\u003dproject.project_key)\n    for key, value in KB_IDs.items()\n}\nvector_stores\n\nvector_stores \u003d [kb.as_langchain_vectorstore() for kb in kbs]\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
       ],
       "outputs": []
     },
