--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -68,7 +68,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Create the question answering chain\nchain \u003d load_qa_chain(gpt_lc, chain_type\u003d\"stuff\")\n\nquery \u003d {\n    \n}\n"
+        "# Create the question answering chain\nchain \u003d load_qa_chain(gpt_lc, chain_type\u003d\"stuff\")\nquery \u003d \"Fuel Voltage Levels Quality\"\n"
       ],
       "outputs": []
     },
@@ -77,7 +77,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Performing semantic (vector) search\nsearch_results \u003d vector_store.similarity_search(query)\n\nfor search_result in search_results:\n    print(f\"- {search_result.page_content}\\n\")"
+        "# Performing semantic (vector) search\nsearch_results \u003d {\n    key: value.similarity_search(query)\n    for key, value in vector_stores.items()\n}\n\nvector_store.similarity_search(query)\n\nfor search_result in search_results:\n    print(f\"- {search_result.page_content}\\n\")"
       ],
       "outputs": []
     },
