Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -32,7 +32,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\n\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\n\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
+        "import dataiku\nfrom langchain.chains.question_answering import load_qa_chain\nfrom dataiku.langchain.dku_llm import DKUChatLLM\nimport json\nKB_IDs \u003d {\n    \"tech_docs\": \"zQ92IhQ9\",\n    \"non_conformities\": \"WnKb6p17\"\n}\n\nclient \u003d dataiku.api_client()\nproject \u003d client.get_default_project()"
       ],
       "outputs": []
     },
@@ -77,9 +77,18 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Performing semantic (vector) search\nsearch_results \u003d {\n    key: value.similarity_search(query)\n    for key, value in vector_stores.items()\n}\n\nfor key in KB_IDs:\n    for search_result in search_results[key]:\n        print(f\"# {json.loads(search_result.metadata[\u0027DKU_EXTRA_SETTINGS\u0027])} \\n{search_result.page_content}\\n\")"
+        "metadata_columns"
       ],
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "trusted": false
+      },
+      "source": [
+        "# Performing semantic (vector) search\nsearch_results \u003d {\n    key: value.similarity_search(query)\n    for key, value in vector_stores.items()\n}\n\nfor key in KB_IDs:\n    for search_result in search_results[key]:\n        print(f\"# {search_result.doc} \\n{search_result.page_content}\\n\")"
+      ]
     },
     {
       "execution_count": 0,
