--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -77,7 +77,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "metadata_columns"
+        "search_results \u003d { key: value.similarity_search(query) for key, value in vector_stores.items() }\n\nfor key in KB_IDs:\n    for search_result in search_results[key]:\n        print(f\"# {search_result.metadata[\u0027doc\u0027]} \\n{search_result.page_content}\\n\")"
       ],
       "outputs": []
     },
@@ -87,7 +87,7 @@
         "trusted": false
       },
       "source": [
-        "# Performing semantic (vector) search\nsearch_results \u003d {\n    key: value.similarity_search(query)\n    for key, value in vector_stores.items()\n}\n\nfor key in KB_IDs:\n    for search_result in search_results[key]:\n        print(f\"# {search_result.doc} \\n{search_result.page_content}\\n\")"
+        "search_results \u003d {\n    key: value.similarity_search(query)\n    for key, value in vector_stores.items()\n}\n\nfor key in KB_IDs:\n    for search_result in search_results[key]:\n        print(f\"# {search_result.doc} \\n{search_result.page_content}\\n\")"
       ]
     },
     {
