--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -77,7 +77,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "search_results \u003d [ value.similarity_search(query) for key, value in vector_stores.items() ]\n\nsearch_results \u003d [ {\n        \"doc\": search_result.metadata[\u0027doc\u0027],\n        \"chunk_id\": search_result.metadata[\u0027chunk_id\u0027]},\n        \"chunk\": search_result.page_content\n    }\n    for search_result in search_results\n]\nprint(search)"
+        "search_results \u003d [ value.similarity_search(query) for key, value in vector_stores.items() ]\nprint(search_results)\nsearch_results \u003d [ {\n        \"doc\": search_result.metadata[\u0027doc\u0027],\n        \"chunk_id\": search_result.metadata[\u0027chunk_id\u0027],\n        \"chunk\": search_result.page_content\n    }\n    for search_result in search_results\n]\nprint(search_results)"
       ],
       "outputs": []
     },
