--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -68,7 +68,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Create the question answering chain\nchain \u003d load_qa_chain(gpt_lc, chain_type\u003d\"stuff\")\nquery \u003d \"Fuel Voltage Levels Quality 000\"\n"
+        "# Create the question answering chain\nchain \u003d load_qa_chain(gpt_lc, chain_type\u003d\"stuff\")\nquery \u003d \"Fuel Voltage Levels Quality\"\n"
       ],
       "outputs": []
     },
@@ -77,7 +77,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search(query)]\nsearch_results \u003d [ {\n        \"doc\": s.metadata[\u0027doc\u0027],\n        \"chunk_id\": s.metadata[\u0027chunk_id\u0027],\n        \"chunk\": s.page_content\n    }\n    for s in search_results\n]\nprint(search_results)"
+        "search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search(query)]\nsearch_results \u003d [ {\n        \"doc\": s.metadata[\u0027doc\u0027],\n        \"chunk_id\": s.metadata[\u0027chunk_id\u0027],\n        #\"chunk\": s.page_content\n    }\n    for s in search_results\n]\nprint(search_results)"
       ],
       "outputs": []
     },
