--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -59,7 +59,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Preparing the Knowledge Bank, Vector store and LLM\nKBs \u003d {\n    key: dataiku.KnowledgeBank(id\u003dvalue, project_key\u003dproject.project_key)\n    for key, value in KB_IDs.items()\n}\nvector_stores \u003d {\n    key: value.as_langchain_vectorstore()\n    for key, value in KBs.items()\n}\n\ngpt_lc \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
+        "# Preparing the Knowledge Bank, Vector store and LLM\nKBs \u003d {\n    key: dataiku.KnowledgeBank(id\u003dvalue, project_key\u003dproject.project_key)\n    for key, value in KB_IDs.items()\n}\nvector_stores \u003d {\n    key: value.as_langchain_vectorstore()\n    for key, value in KBs.items()\n}\n\nlangchain_llm \u003d DKUChatLLM(llm_id\u003dLLM_ID, temperature\u003d0)"
       ],
       "outputs": []
     },
@@ -68,7 +68,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Create the question answering chain\nchain \u003d load_qa_chain(gpt_lc, chain_type\u003d\"stuff\")\nquery \u003d \"Fuel Voltage Levels Quality\"\n"
+        "# Create the question answering chain\nchain \u003d load_qa_chain(langchain_llm, chain_type\u003d\"stuff\")\nuser_message \u003d \"Fuel Voltage Levels Quality\"\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "prompt \u003d (\n    f\"You\u0027re supporting Quality Controller for A220 and rely on the knowledge from the A220 technical \"\n    f\"doc and non conformity knowledge base (vector databes. You must provide an optimize query towards \"\n    f\"those vector databases to enable the best retrieval given the user input. \"\n    f\"Please just provide the query without any comment to be reused as is. \\n\\n\"\n    f\"The user is the following:\\n {user_message}\\n\\n\\n\"\n    f\"Remember to only provide the requested query for the knowledge database without any comment.\"\n)\n\ncompletion \u003d llm.new_completion()\ncompletion.with_message(prompt)\nresp \u003d completion.execute()"
       ],
       "outputs": []
     },
