Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -111,7 +111,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "deep_chat_response \u003d {\n    \"text\": json.loads(resp.text),\n    \"sources\": search_results,\n    \"role\": \"ai\"\n}\nprint(deep_chat_response)"
+        "response_content \u003d json.loads(resp.text)\ndeep_chat_response \u003d {\n    \"text\": response_content[\u0027comment\u0027],\n    \"label\": response_content[\u0027label\u0027],\n    \"description\": response_content[\u0027description\u0027],\n    \"sources\": search_results,\n    \"role\": \"ai\"\n}\nprint(deep_chat_response)"
       ],
       "outputs": []
     },
