--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -86,7 +86,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d2)]\n#print(search_results)\nsearch_results \u003d [ {\n        \"doc\": doc.metadata[\u0027doc\u0027],\n        \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n        \"score\": score,\n        \"chunk\": doc.page_content\n    }\n    for doc, score in search_results\n]\nprint(search_results)"
+        "search_results \u003d [result for key, value in vector_stores.items() for result in value.similarity_search_with_relevance_scores(query, k\u003d10)]\n#print(search_results)\nsearch_results \u003d [ {\n        \"doc\": doc.metadata[\u0027doc\u0027],\n        \"chunk_id\": doc.metadata[\u0027chunk_id\u0027],\n        \"relevance_scores\": score,\n        #\"chunk\": doc.page_content\n    }\n    for doc, score in search_results\n]\nprint(search_results)"
       ],
       "outputs": []
     },
