Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -120,6 +120,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "auth_info \u003d client.get_auth_info(with_secrets\u003dTrue)\nsecret_value \u003d None\nprint(auth_info[\"secrets\"])\nfor key, value in auth_info[\"secrets\"]:\n    if key \u003d\u003d \"JWT_SECRET_KEY\":\n        secret_value \u003d value\n        break\nprint(secret_value)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         ""
       ],
       "outputs": []
