--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -120,7 +120,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "auth_info \u003d client.get_auth_info(with_secrets\u003dTrue)\nsecret_value \u003d None\nprint(auth_info[\"secrets\"])\nfor key, value in auth_info[\"secrets\"]:\n    if key \u003d\u003d \"JWT_SECRET_KEY\":\n        secret_value \u003d value\n        break\nprint(secret_value)"
+        "auth_info \u003d client.get_auth_info(with_secrets\u003dTrue)\nsecret_value \u003d None\nprint(auth_info[\"secrets\"])\nfor secret in auth_info[\"secrets\"]:\n    if secret[\"key\"] \u003d\u003d \"JWT_SECRET_KEY\":\n        secret_value \u003d secret[\"value\"]\n        break\nprint(secret_value)"
       ],
       "outputs": []
     },
