Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -77,7 +77,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "recipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\n\n# Afficher la configuration actuelle de la recette\nconfig \u003d recipe.get_payload()\nprint(\"Configuration actuelle :\", config)\n\n# (Optionnel) Modification des paramètres de la recette\n# Par exemple, modifier un filtre existant ou ajuster une transformation\nconfig[\"steps\"][0][\"params\"][\"expression\"] \u003d \"revenus \u003e 50000\"  # Exemple\nrecipe.set_payload(config)"
+        "recipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\n\n# Récupérer la configuration actuelle de la recette\nconfig \u003d recipe.get_settings()  # Correctement utilisé pour récupérer la configuration\nprint(\"Configuration actuelle :\", config)\n"
       ],
       "outputs": []
     },
