Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -77,7 +77,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "recipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\n\n# Récupérer la configuration actuelle de la recette\nsettings \u003d recipe.get_settings()  # Correctement utilisé pour récupérer la configuration\nprint(\"Configuration actuelle :\", dir(settings))\n"
+        "recipe \u003d project.get_recipe(\u0027compute_nc_scenarios_query\u0027)\n\n# Récupérer la configuration actuelle de la recette\nsettings \u003d recipe.get_settings()  # Correctement utilisé pour récupérer la configuration\nprint(\"Configuration actuelle :\", settings.get_json_payload())\n"
       ],
       "outputs": []
     },
