Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -86,7 +86,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        ""
+        "def completion_from_prompt_recipe(recipe_name):\n    recipe \u003d project.get_recipe(recipe_name)\n    config \u003d recipe.get_settings().get_json_payload()\n    system_prompt \u003d "
       ],
       "outputs": []
     },
