Saved Jupyter notebook 'KB Test Notebook - a220_tech_docs_content_embedded'

--- a/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
+++ b/ipython_notebooks/KB Test Notebook - a220_tech_docs_content_embedded.ipynb
@@ -86,7 +86,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "def completion_from_prompt_recipe(recipe_name):\n    #partial method\n    recipe \u003d project.get_recipe(recipe_name)\n    config \u003d recipe.get_settings().get_json_payload()\n    promptStudioId \u003d { id: config.associatedPromptStudioId, prompt_id: config.associatedPromptStudioPromptId }\n    llm_id \u003d config.completionSettings.llmId\n    structured_inputs \u003d config.completionSettings.prompt.textPromptTemplateInputs\n    system_prompt \u003d config.completionSettings.prompt.textPromptSystemTemplate\n    temperature \u003d config.completionSettings.temperature\n    llm \u003d project.get_llm(llm_id)\n    completion \u003d llm.new_completion()\n    \n    "
+        "def completion_from_prompt_recipe(recipe_name):\n    #partial method\n    recipe \u003d project.get_recipe(recipe_name)\n    config \u003d recipe.get_settings().get_json_payload()\n    promptStudioId \u003d { id: config.associatedPromptStudioId, prompt_id: config.associatedPromptStudioPromptId }\n    llm_id \u003d config.completionSettings.llmId\n    structured_inputs \u003d config.completionSettings.prompt.textPromptTemplateInputs\n    system_prompt \u003d config.completionSettings.prompt.textPromptSystemTemplate\n    user_prompt \u003d config.completionSettings.prompt.textPromptSystemTemplate\n    temperature \u003d config.completionSettings.temperature\n    llm \u003d project.get_llm(llm_id)\n    completion \u003d llm.new_completion()\n    completion.with_message(message, role\u003d\u0027user\u0027)\n    \n    "
       ],
       "outputs": []
     },
